# EquiNet

./: .gitignore  CITATIONS.bib  LICENSE.txt  README.md  environment.yml  hyperparameter_optimization.py  parameters.py  predict.py  setup.cfg  setup.py  train.py  version_update_test.ipynb
chemprop/: __init__.py  args.py  hyperopt_utils.py  hyperparameter_optimization.py  utils.py
chemprop/data/: data.py  utils.py
chemprop/models/: ffn.py  model.py  mpn.py  vle.py
chemprop/train/: __init__.py  cross_validate.py  evaluate.py  make_predictions.py  metrics.py  molecule_fingerprint.py  parameters.py  predict.py  run_training.py  train.py
chemprop/uncertainty/: uncertainty_predictor.py
equinet/: __init__.py  args.py  hyperopt_utils.py  hyperparameter_optimization.py  multitask_utils.py  nn_utils.py  utils.py  version_enforcement.py
equinet/data/: data.py  scaffold.py  utils.py
equinet/features/: featurization.py
equinet/models/: __init__.py  ffn.py  model.py  mpn.py  vle.py  vp.py
equinet/train/: __init__.py  cross_validate.py  evaluate.py  loss_functions.py  make_predictions.py  molecule_fingerprint.py  parameters.py  predict.py  run_training.py  train.py
equinet/uncertainty/: uncertainty_calibrator.py  uncertainty_estimator.py  uncertainty_evaluator.py  uncertainty_predictor.py
scripts/: isobaric_envelope.ipynb  isothermal_envelope.ipynb  predict_with_cli.sh  predict_with_functions.ipynb
