[metadata]
name = chemprop
version = 0.1.0
author = The EquiNet Development Team (see LICENSE.txt)
author_email = mcgillc2@vcu.edu
license = MIT
description = Molecular Property Prediction with Message Passing Neural Networks
keywords =
    chemistry
    machine learning
    property prediction
    message passing neural network
    graph neural network
url = https://github.com/chemprop/chemprop
download_url = https://github.com/chemprop/chemprop/v_1.6.1.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation = https://chemprop.readthedocs.io/en/latest/
    Source = https://github.com/chemprop/chemprop
    PyPi = https://pypi.org/project/chemprop/

[options]
packages = find:
install_requires =
    flask>=1.1.2,<=2.1.3
    Werkzeug<3
    hyperopt>=0.2.3
    matplotlib>=3.1.3
    numpy>=1.18.1
    pandas>=1.0.3
    pandas-flavor>=0.2.0
    scikit-learn>=1.4
    scipy>=1.4.1
    sphinx>=3.1.2
    tensorboardX>=2.0
    torch>=2.6
    tqdm>=4.45.0
    typed-argument-parser>=1.6.1
    rdkit>=2020.03.1.0
python_requires = >=3.9

[options.extras_require]
test = pytest>=6.2.2; parameterized>=0.8.1

[options.package_data]
chemprop = py.typed
